--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Logo page</title>
-
+    <link rel="icon" type="image/png" href="assets/favicon.png">
   <!-- Bebas Neue -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
@@ -96,9 +96,9 @@
       <!-- change the media breakpoint or add more <source> rules if needed -->
       <picture>
         <!-- narrow screens: use square logo -->
-        <source srcset="logoSquare.png" media="(max-width:600px)">
+        <source srcset="assets/logoSquare.png" media="(max-width:600px)">
         <!-- default: long logo -->
-        <img class="logo" src="logoLong.png" alt="Logo">
+        <img class="logo" src="assets/logoLong.png" alt="Logo">
       </picture>
 
       <nav class="links" aria-label="Primary links">
