--- a/portfolios/saebyul/index.html
+++ b/portfolios/saebyul/index.html
@@ -53,7 +53,7 @@
 <body>
 
   <div>
-  <h1>SAEBYUL</h1>
+  <h1>Portfolio Section under Construction</h1>
     <a href="../../index.html">Back to Main Site</a>
   </div>
 
