--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       --glow: rgba(255,0,133,1);
     }
 
-    
+
     html,body{
       height:100%;
       margin:0;
@@ -109,9 +109,9 @@
         </a>
 
         <!-- root-relative link to the index.html inside /portfolios/saebyul -->
-        <a href="portfolios/saebyul/index.html">
+        <!-- <a href="portfolios/saebyul/index.html">
             About
-        </a>
+        </a> -->
         </nav>
     </div>
   </div>
